--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,61 @@
-node_modules
+# Node modules
+node_modules/
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm/
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Babel cache
+.babel-cache/
+.cache/
+.cache-loader/
+
+# Coverage directory (nyc / istanbul)
+coverage/
+
+# Dist & build
+dist/
+build/
+
+# VS Code settings
+.vscode/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Temporary files
+tmp/
+temp/
+
+# TypeScript
+*.tsbuildinfo
+
+# Express Uploads (If any)
+uploads/
